--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.19.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.genai/google-genai -->
+		<dependency>
+			<groupId>com.google.genai</groupId>
+			<artifactId>google-genai</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
