Configuando variables de entorno

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-spring.application.name=moviesplus
+# Conexión a PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/alura_series_clase
+spring.datasource.username=postgres
+spring.datasource.password=Admin1
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Configuración de JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+
