Buscando episodios DB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,17 @@
 # Conexión a PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/alura_series_clase
-spring.datasource.username=postgres
-spring.datasource.password=Admin1
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configuración de JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+spring.jpa.format-sql=true
+
+
+# Configuracion api key
+
+API_KEY_OMDB=${${API_KEY_OMDB}}
 
